--- a/BidOnline-war/src/main/webapp/index.xhtml
+++ b/BidOnline-war/src/main/webapp/index.xhtml
@@ -111,6 +111,9 @@
                                     paginator="true"
                                     paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
                                     rowsPerPageTemplate="9,12,15">
+                            <f:facet name="header">
+                                Active offers
+                            </f:facet>
                             <!--<ui:param name="myVar" value="0"/>-->
                             <!--<p:graphicImage value="" height="200" width="200"/>-->
                             <div style="background-color: #ffe4c4">
