--- a/BidOnline-war/src/main/webapp/bidRequest.xhtml
+++ b/BidOnline-war/src/main/webapp/bidRequest.xhtml
@@ -20,36 +20,94 @@
     <h:outputStylesheet library="css" name="style.css"/>
 </h:head>
 
-<h:body>
+<h:body styleClass="indexContainer">
     <p:layout fullPage="true">
-        <p:layoutUnit position="north" size="100">
-            <h:form>
-                <div style="padding-left: 10px;padding-right: 10px">
-                    <div>
-                        <h2 style="color: #d2691e">BidOnline</h2>
-                    </div>
-                    <div class="logout">
-                        <p:commandButton rendered="#{bidRequestController.loggedUserId != null}" value="logout"
-                                         action="#{homeController.logout}"/>
-                    </div>
-                </div>
-            </h:form>
+        <p:layoutUnit position="north" size="130">
+            <div style="float: right">
+                Welcome <p:outputLabel value=" #{bidRequestController.loggedUserName}"/>!
+            </div>
+            <!--<div style="">-->
+            <!--<div style="float: left">-->
+            <!--<h2 style="color: #d2691e">BidOnline</h2>-->
+            <!--</div>-->
+            <div style="padding-top: 20px">
+                <h:form id="north1">
+                    <h:panelGrid columns="2">
+
+                        <h2 style="color: #d2691e;float: left">BidOnline</h2>
+                        <!--<div >-->
+                        <h:panelGrid columns="6" style="float: right;padding-left: 395px">
+                            <p:outputLabel value="Select" style="color: red"/>
+                            <p:outputLabel value="Category" style="color: red"/>
+                            <p:selectOneMenu value="#{bidRequestController.itemCategory}">
+                                <f:selectItem itemValue="car" itemLabel="car"/>
+                                <f:selectItem itemValue="motor-cycle" itemLabel="Motor-cycle"/>
+                                <f:selectItem itemValue="auto-rickshaw" itemLabel="Auto-rickshaw"/>
+                                <f:selectItem itemValue="house" itemLabel="House"/>
+                                <f:selectItem itemValue="land" itemLabel="Land"/>
+                                <f:selectItem itemValue="shirt" itemLabel="Shirt"/>
+                                <f:selectItem itemValue="baby-wearings" itemLabel="Baby-wearings"/>
+                                <f:selectItem itemValue="shari" itemLabel="Shari"/>
+                                <f:selectItem itemValue="shoes" itemLabel="Shoes"/>
+                                <f:selectItem itemValue="diamond" itemLabel="Diamond"/>
+                                <f:selectItem itemValue="silver" itemLabel="Silver"/>
+                                <f:selectItem itemValue="gold" itemLabel="Gold"/>
+                                <f:selectItem itemValue="others" itemLabel="Others"/>
+                            </p:selectOneMenu>
+                            <p:commandButton value="Search"
+                                             action="#{bidRequestController.showItemList(bidRequestController.itemCategory)}"/>
+                            <p:spacer width="30px"/>
+                            <p:commandButton value="logout" action="#{bidRequestController.logout}"/>
+                        </h:panelGrid>
+                        <!--</div>-->
+                    </h:panelGrid>
+                </h:form>
+            </div>
         </p:layoutUnit>
         <p:layoutUnit position="center">
-            <h1>Item Details</h1>
+
             <h:form>
+                <div>
+                    <h:form>
+                        <p:menubar style="color: #add8e6">
+                            <p:submenu label="My Profile">
+                                <p:submenu label="Offers">
+                                    <p:menuitem value="Pending offers" outcome="myPendingList.xhtml"/>
+                                    <p:menuitem value="Active offers" outcome="myOffers.xhtml"/>
+                                </p:submenu>
+
+                                <p:menuitem value="Bids" outcome="myBidList.xhtml"/>
+                                <p:menuitem value="Sellings" outcome="itemDetails.xhtml"/>
+                                <p:menuitem value="Edit profile"/>
+                            </p:submenu>
+                            <p:submenu label="Available offers">
+                                <p:menuitem rendered="#{homeController.userRole == 0}" value="Activate offers"
+                                            outcome="pendingOffers.xhtml"/>
+                                <p:menuitem value="Recent offers" outcome="availableOffers.xhtml"/>
+                                <p:menuitem value="Top offers"/>
+                            </p:submenu>
+                            <p:menuitem value="Sell an item" outcome="itemDetails.xhtml"/>
+
+                            <p:menuitem value="Home" outcome="home.xhtml"/>
+                        </p:menubar>
+                    </h:form>
+                </div>
                 <div style="background-color: #ffe4c4">
-                    <h:panelGrid columns="2">
-                        <p:outputLabel value="Title" style="color: red"/>
+                     <h:panelGrid columns="2">
+                         <f:facet name="header">
+                             Item Details
+                         </f:facet>
+
+                         <p:outputLabel value="Title" style="color: red"/>
                         <p:outputLabel value="#{bidRequestController.item.itemTitle}"/>
                         <p:outputLabel value="Subtitle" style="color: red"/>
                         <p:outputLabel value="#{bidRequestController.item.itemSubtitle}"/>
                         <p:outputLabel value="Description" style="color: red"/>
                         <p:outputLabel value="#{bidRequestController.item.itemDescription}"/>
                         <p:outputLabel value="Starting price" style="color: red"/>
-                        <p:outputLabel value="#{bidRequestController.item.itemStartingPrice}"/>
+                        <p:outputLabel value=" \$#{bidRequestController.item.itemStartingPrice}"/>
                         <p:outputLabel value="Fixed price" style="color: red"/>
-                        <p:outputLabel value="#{bidRequestController.item.itemFixedPrice}"/>
+                        <p:outputLabel value=" \$#{bidRequestController.item.itemFixedPrice}"/>
                         <p:outputLabel value="Condition" style="color: red"/>
                         <p:outputLabel value="#{bidRequestController.item.itemCondition}"/>
                         <p:outputLabel value="Upload date" style="color: red"/>
@@ -62,14 +120,14 @@
                                        style="color: red"/>
                         <p:outputLabel rendered="#{bidRequestController.item.itemLatestBid>0}"
                                        value="#{bidRequestController.item.itemLatestBid}"/>
+
+                        <c:if test="${bidRequestController.loggedUserId != bidRequestController.item.userId}">
                         <p:outputLabel for="bidPrice" value="Enter bid price:" style="color: red"/>
                         <p:inputText id="bidPrice" value="#{bidRequestController.bid.bidPrice}" size="10"
                                      validatorMessage="Higher bid already there">
                             <f:validateLongRange minimum="#{bidRequestController.item.itemLatestBid}"/>
                         </p:inputText>
                         <p:message for="bidPrice"/>
-                        <c:if test="${bidRequestController.loggedUserId != bidRequestController.item.userId}">
-                            hello
                             <c:choose>
                                 <c:when test="${bidRequestController.newBid==1}">
                                     <p:commandButton value="Bid now"
