--- a/BidOnline-war/src/main/webapp/home.xhtml
+++ b/BidOnline-war/src/main/webapp/home.xhtml
@@ -19,7 +19,7 @@
     <h:outputStylesheet library="css" name="style.css"/>
 </h:head>
 
-<h:body>
+<h:body styleClass="indexContainer">
     <!--<div class="SignUp">-->
     <!--<h:link outcome="index.xhtml" value="logout"/>-->
     <!--</div>-->
@@ -27,16 +27,21 @@
     <p:layout fullPage="true">
         <p:layoutUnit position="north" size="130" resizable="false">
             <div style="float: right">
-                Welcome <p:outputLabel value=" #{homeController.loggedUserName}"/>
+                Welcome <p:outputLabel value=" #{homeController.loggedUserName}"/>!
             </div>
+            <!--<div style="">-->
+            <!--<div style="float: left">-->
+            <!--<h2 style="color: #d2691e">BidOnline</h2>-->
+            <!--</div>-->
             <div style="padding-top: 20px">
-                <div style="float: left">
-                    <h2 style="color: #d2691e">BidOnline</h2>
-                </div>
-                <div style="padding-left: 500px;float: right;padding-top: 20px;">
-                    <h:form id="north1">
-                        <h:panelGrid columns="5">
-                            <p:outputLabel value="Select category" style="color: red"/>
+                <h:form id="north1">
+                    <h:panelGrid columns="2">
+
+                        <h2 style="color: #d2691e;float: left">BidOnline</h2>
+                        <!--<div >-->
+                        <h:panelGrid columns="6" style="float: right;padding-left: 395px">
+                            <p:outputLabel value="Select" style="color: red"/>
+                            <p:outputLabel value="Category" style="color: red"/>
                             <p:selectOneMenu value="#{homeController.itemCategory}">
                                 <f:selectItem itemValue="car" itemLabel="car"/>
                                 <f:selectItem itemValue="motor-cycle" itemLabel="Motor-cycle"/>
@@ -56,12 +61,13 @@
                                              action="#{homeController.showItemList(homeController.itemCategory)}"/>
                             <p:spacer width="30px"/>
                             <p:commandButton value="logout" action="#{homeController.logout}"/>
-
                         </h:panelGrid>
-                    </h:form>
-                </div>
-
+                        <!--</div>-->
+                    </h:panelGrid>
+                </h:form>
             </div>
+
+            <!--</div>-->
         </p:layoutUnit>
         <p:layoutUnit position="center">
             <div>
@@ -78,49 +84,60 @@
                             <p:menuitem value="Edit profile"/>
                         </p:submenu>
                         <p:submenu label="Available offers">
+
                             <p:menuitem rendered="#{homeController.userRole == 0}" value="Activate offers"
                                         outcome="pendingOffers.xhtml"/>
-                            <p:menuitem value="Recent offers" outcome="availableOffers.xhtml"/>
-                            <p:menuitem value="Top offers"/>
+                            <p:menuitem value="Recent offers"  action="#{homeController.recent}"/>
+                            <p:menuitem value="Top offers" action="#{homeController.top}"/>
+
                         </p:submenu>
                         <p:menuitem value="Sell an item" outcome="itemDetails.xhtml"/>
 
+                        <p:menuitem value="Home" outcome="home.xhtml"/>
                     </p:menubar>
                 </h:form>
             </div>
+
             <!--</div>-->
-            <div style="padding-left: 400px;float: left">
-                <div align="center">
-                    <h2 style="color: #006400">Recent Offers</h2>
-                </div>
-                <div style="float: right">
-                    <h:form>
-                        <p:dataGrid value="#{homeController.itemList}" var="offers" columns="3" rows="12"
-                                    paginator="true"
-                                    paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
-                                    rowsPerPageTemplate="9,12,15">
-                            <!--<ui:param name="myVar" value="0"/>-->
-                            <!--<p:graphicImage value="" height="200" width="200"/>-->
-                            <div style="background-color: #ffe4c4">
-                                <h:panelGrid columns="2">
-                                    <p:outputLabel value="Item name:"/>
-                                    <p:outputLabel value=" #{offers.itemTitle}"/>
-                                    <p:outputLabel value="Fixed price:"/>
-                                    <p:outputLabel value="\$ #{offers.itemFixedPrice}"/>
-                                    <p:outputLabel value="Starting price:"/>
-                                    <p:outputLabel value="\$ #{offers.itemStartingPrice}"/>
-                                    <p:commandLink value="Posted By"
-                                                   action="#{homeController.showUserProfile(offers.userId)}"/>
 
-                                    <p:commandButton rendered="#{homeController.loggedUserId != offers.userId}" value="Buy this item"
-                                                     action="#{homeController.offeredItemDetails(offers.itemId)}"/>
 
-                                </h:panelGrid>
-                            </div>
-                        </p:dataGrid>
-                    </h:form>
-                </div>
+            <div style="padding-left: 200px;padding-top: 20px;padding-right: 200px">
+                <h:form>
+                    <p:dataList value="#{homeController.itemList}" var="offers" rows="5"
+                                paginator="true"
+                                paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
+                                rowsPerPageTemplate="5,10,15" type="none">
+                        <f:facet name="header">
+                            Recent Offers
+                        </f:facet>
+                        <!--<ui:param name="myVar" value="0"/>-->
+                        <!--<p:graphicImage value="" height="200" width="200"/>-->
+                        <div style="background-color: #ffe4c4">
+                            <h:panelGrid columns="3">
+                                <p:outputLabel value="Item name:"/>
+                                <p:spacer width="5px"/>
+                                <p:outputLabel value=" #{offers.itemTitle}"/>
+                                <p:outputLabel value="Fixed price:"/>
+                                <p:spacer width="10px"/>
+                                <p:outputLabel value="\$ #{offers.itemFixedPrice}"/>
+                                <p:outputLabel value="Starting price:"/>
+                                <p:spacer width="10px"/>
+                                <p:outputLabel value="\$ #{offers.itemStartingPrice}"/>
+                                <p:commandLink value="Posted By"
+                                               action="#{homeController.showUserProfile(offers.userId)}"/>
+                                <p:spacer width="10px"/>
+                                <p:commandButton rendered="#{homeController.loggedUserId != offers.userId}"
+                                                 value="Buy this item"
+                                                 action="#{homeController.offeredItemDetails(offers.itemId)}"/>
+
+                            </h:panelGrid>
+
+                        </div>
+                        <p:spacer height="10px"/>
+                    </p:dataList>
+                </h:form>
             </div>
+
         </p:layoutUnit>
         <!--<p:layoutUnit position="east" size="300" resizable="false">-->
 
