--- a/BidOnline-war/src/main/webapp/myBidList.xhtml
+++ b/BidOnline-war/src/main/webapp/myBidList.xhtml
@@ -20,51 +20,109 @@
     <h:outputStylesheet library="css" name="style.css"/>
 </h:head>
 
-<h:body>
+<h:body styleClass="indexContainer">
     <h1>BidOnline</h1>
     <p:layout fullPage="true">
-        <p:layoutUnit position="north" size="100">
-            <h:form>
-                <div style="padding-left: 10px;padding-right: 10px">
-                    <div>
-                        <h2 style="color: #d2691e">BidOnline</h2>
-                    </div>
-                    <div class="logout">
-                        <p:commandButton value="logout" action="#{homeController.logout}"/>
-                    </div>
-                </div>
-            </h:form>
+        <p:layoutUnit position="north" size="130">
+            <div style="float: right">
+                Welcome <p:outputLabel value=" #{myBidListController.loggedUserName}"/>!
+            </div>
+            <!--<div style="">-->
+            <!--<div style="float: left">-->
+            <!--<h2 style="color: #d2691e">BidOnline</h2>-->
+            <!--</div>-->
+            <div style="padding-top: 20px">
+                <h:form id="north1">
+                    <h:panelGrid columns="2">
+
+                        <h2 style="color: #d2691e;float: left">BidOnline</h2>
+                        <!--<div >-->
+                        <h:panelGrid columns="6" style="float: right;padding-left: 395px">
+                            <p:outputLabel value="Select" style="color: red"/>
+                            <p:outputLabel value="Category" style="color: red"/>
+                            <p:selectOneMenu value="#{myBidListController.itemCategory}">
+                                <f:selectItem itemValue="car" itemLabel="car"/>
+                                <f:selectItem itemValue="motor-cycle" itemLabel="Motor-cycle"/>
+                                <f:selectItem itemValue="auto-rickshaw" itemLabel="Auto-rickshaw"/>
+                                <f:selectItem itemValue="house" itemLabel="House"/>
+                                <f:selectItem itemValue="land" itemLabel="Land"/>
+                                <f:selectItem itemValue="shirt" itemLabel="Shirt"/>
+                                <f:selectItem itemValue="baby-wearings" itemLabel="Baby-wearings"/>
+                                <f:selectItem itemValue="shari" itemLabel="Shari"/>
+                                <f:selectItem itemValue="shoes" itemLabel="Shoes"/>
+                                <f:selectItem itemValue="diamond" itemLabel="Diamond"/>
+                                <f:selectItem itemValue="silver" itemLabel="Silver"/>
+                                <f:selectItem itemValue="gold" itemLabel="Gold"/>
+                                <f:selectItem itemValue="others" itemLabel="Others"/>
+                            </p:selectOneMenu>
+                            <p:commandButton value="Search"
+                                             action="#{myBidListController.showItemList(myBidListController.itemCategory)}"/>
+                            <p:spacer width="30px"/>
+                            <p:commandButton value="logout" action="#{myBidListController.logout}"/>
+                        </h:panelGrid>
+                        <!--</div>-->
+                    </h:panelGrid>
+                </h:form>
+            </div>
         </p:layoutUnit>
         <p:layoutUnit position="center">
-            <div align="center">
-                <h2 style="color: #006400">My Bids</h2>
-            </div>
-            <h:form>
-                <div style="width: 400px">
+            <div>
+                <h:form>
+                    <p:menubar style="color: #add8e6">
+                        <p:submenu label="My Profile">
+                            <p:submenu label="Offers">
+                                <p:menuitem value="Pending offers" outcome="myPendingList.xhtml"/>
+                                <p:menuitem value="Active offers" outcome="myOffers.xhtml"/>
+                            </p:submenu>
 
-                    <p:dataList value="#{myBidListController.itemList}" var="bids"
+                            <p:menuitem value="Bids" outcome="myBidList.xhtml"/>
+                            <p:menuitem value="Sellings" outcome="itemDetails.xhtml"/>
+                            <p:menuitem value="Edit profile"/>
+                        </p:submenu>
+                        <p:submenu label="Available offers">
+                            <p:menuitem rendered="#{homeController.userRole == 0}" value="Activate offers"
+                                        outcome="pendingOffers.xhtml"/>
+                            <p:menuitem value="Recent offers" outcome="availableOffers.xhtml"/>
+                            <p:menuitem value="Top offers"/>
+                        </p:submenu>
+                        <p:menuitem value="Sell an item" outcome="itemDetails.xhtml"/>
+
+                        <p:menuitem value="Home" outcome="home.xhtml"/>
+                    </p:menubar>
+                </h:form>
+            </div>
+            <!--<div align="center">-->
+                <!--<h2 style="color: #006400">My Bids</h2>-->
+            <!--</div>-->
+            <div style="padding-left: 200px;padding-top: 20px;padding-right: 200px">
+            <h:form>
+                <!--<div style="width: 400px">-->
+
+                    <p:dataList value="#{myBidListController.bidList}" var="bids"
                                 paginator="true" rows="5" effectSpeed="fast"
                                 paginatorTemplate="{PreviousPageLink} {CurrentPageReport} {NextPageLink} {RowsPerPageDropdown}"
                                 rowsPerPageTemplate="5,10,15" type="none" varStatus="loop"
                             >
+                        <f:facet name="header">
+                            My Bids
+                        </f:facet>
                         <div style="background-color: #ffe4c4">
                             <h:panelGrid columns="2">
-                                <p:outputLabel value="Uploaded on:"/>
-                                <p:outputLabel value="#{bids.itemUploadDate}"/>
-                                <p:outputLabel value="Serial No:"/>
-                                <p:outputLabel value=" #{bids.itemId}"/>
+                                <p:outputLabel value="Bid no:"/>
+                                <p:outputLabel value="#{bids.bidId}"/>
+                                <p:outputLabel value="Bid on:"/>
+                                <p:outputLabel value="#{bids.bidDate}"/>
                                 <p:outputLabel value="Offer No:"/>
-                                <p:outputLabel value="#{bids.itemTitle}"/>
-                                <p:outputLabel value="Starting price:"/>
-                                <p:outputLabel value="#{bids.itemStartingPrice}"/>
-                                <p:outputLabel value="Your bid:"/>
-                                <p:outputLabel value="#{myBidListController.bidList[loop.index].bidPrice}"/>
+                                <p:commandLink value=" #{bids.itemId}" action="#{myBidListController.offeredItemDetails(bids.itemId)}"/>
+                                <p:outputLabel value="Bid price:"/>
+                                <p:outputLabel value=" \$#{bids.bidPrice}"/>
                             </h:panelGrid>
                         </div>
                         <p:spacer/>
                     </p:dataList>
-                </div>
+                <!--</div>-->
             </h:form>
+            </div>
         </p:layoutUnit>
     </p:layout>
 </h:body>
