--- a/BidOnline-war/src/main/webapp/myOffers.xhtml
+++ b/BidOnline-war/src/main/webapp/myOffers.xhtml
@@ -18,19 +18,28 @@
 
 <h:head>
     <title>MyOffers</title>
+    <h:outputStylesheet library="css" name="style.css"/>
 </h:head>
 
-<h:body>
+<h:body styleClass="indexContainer">
     <p:layout fullPage="true">
-        <p:layoutUnit position="north">
-            <div>
-                <div style="float: left">
-                    <h2 style="color: #d2691e">BidOnline</h2>
-                </div>
-                <div style="padding-left: 500px;float: right;padding-top: 20px">
-                    <h:form id="north1">
-                        <h:panelGrid columns="5">
-                            <p:outputLabel value="Select category" style="color: red"/>
+        <p:layoutUnit position="north" size="130">
+            <div style="float: right">
+                Welcome <p:outputLabel value=" #{myOffersController.loggedUserName}"/>!
+            </div>
+            <!--<div style="">-->
+            <!--<div style="float: left">-->
+            <!--<h2 style="color: #d2691e">BidOnline</h2>-->
+            <!--</div>-->
+            <div style="padding-top: 20px">
+                <h:form id="north1">
+                    <h:panelGrid columns="2">
+
+                        <h2 style="color: #d2691e;float: left">BidOnline</h2>
+                        <!--<div >-->
+                        <h:panelGrid columns="6" style="float: right;padding-left: 395px">
+                            <p:outputLabel value="Select" style="color: red"/>
+                            <p:outputLabel value="Category" style="color: red"/>
                             <p:selectOneMenu value="#{myOffersController.itemCategory}">
                                 <f:selectItem itemValue="car" itemLabel="car"/>
                                 <f:selectItem itemValue="motor-cycle" itemLabel="Motor-cycle"/>
@@ -49,20 +58,42 @@
                             <p:commandButton value="Search"
                                              action="#{myOffersController.showItemList(myOffersController.itemCategory)}"/>
                             <p:spacer width="30px"/>
-
-                            <p:commandButton rendered="#{myOffersController.loggedUserId != null}"
-                                             value="logout" action="#{myOffersController.logout}"/>
-
+                            <p:commandButton value="logout" action="#{myOffersController.logout}"/>
                         </h:panelGrid>
-                    </h:form>
-                </div>
-
+                        <!--</div>-->
+                    </h:panelGrid>
+                </h:form>
             </div>
         </p:layoutUnit>
         <p:layoutUnit position="center">
-            <div align="center">
-                <h2 style="color: #006400">My Offers</h2>
+            <div>
+                <h:form>
+                    <p:menubar style="color: #add8e6">
+                        <p:submenu label="My Profile">
+                            <p:submenu label="Offers">
+                                <p:menuitem value="Pending offers" outcome="myPendingList.xhtml"/>
+                                <p:menuitem value="Active offers" outcome="myOffers.xhtml"/>
+                            </p:submenu>
+
+                            <p:menuitem value="Bids" outcome="myBidList.xhtml"/>
+                            <p:menuitem value="Sellings" outcome="itemDetails.xhtml"/>
+                            <p:menuitem value="Edit profile"/>
+                        </p:submenu>
+                        <p:submenu label="Available offers">
+
+                            <p:menuitem rendered="#{homeController.userRole == 0}" value="Activate offers"
+                                        outcome="pendingOffers.xhtml"/>
+                            <p:menuitem value="Recent offers"  action="#{homeController.recent}"/>
+                            <p:menuitem value="Top offers" action="#{homeController.top}"/>
+
+                        </p:submenu>
+                        <p:menuitem value="Sell an item" outcome="itemDetails.xhtml"/>
+
+                        <p:menuitem value="Home" outcome="home.xhtml"/>
+                    </p:menubar>
+                </h:form>
             </div>
+
             <div style="width: 400px">
                 <p:dataList value="#{myOffersController.activeItems}" var="offers" rows="12"
                             paginator="true"
@@ -70,6 +101,9 @@
                             rowsPerPageTemplate="9,12,15" type="none">
                     <!--<ui:param name="myVar" value="0"/>-->
                     <!--<p:graphicImage value="" height="200" width="200"/>-->
+                    <f:facet name="header">
+                        My Offers
+                    </f:facet>
                     <div style="background-color: #ffe4c4">
                         <h:panelGrid columns="2">
                             <p:outputLabel value="Serial No:"/>
