--- a/BidOnline-war/src/main/webapp/myOffers.xhtml
+++ b/BidOnline-war/src/main/webapp/myOffers.xhtml
@@ -94,7 +94,7 @@
                 </h:form>
             </div>
 
-            <div style="width: 400px">
+            <div style="padding-left: 200px;padding-top: 20px;padding-right: 200px">
                 <p:dataList value="#{myOffersController.activeItems}" var="offers" rows="12"
                             paginator="true"
                             paginatorTemplate="{CurrentPageReport}  {FirstPageLink} {PreviousPageLink} {PageLinks} {NextPageLink} {LastPageLink} {RowsPerPageDropdown}"
