--- a/BidOnline-war/src/main/webapp/index.xhtml
+++ b/BidOnline-war/src/main/webapp/index.xhtml
@@ -97,7 +97,7 @@
                                             action="#{indexController.showItemList(indexController.items[12])}"/>
                             </p:submenu>
                             <p:submenu label="Others">
-                                <p:menuitem value="Food"
+                                <p:menuitem value="Electronics"
                                             action="#{indexController.showItemList(indexController.items[13])}"/>
                             </p:submenu>
                         </p:tieredMenu>
