--- a/BidOnline-war/src/main/webapp/home.xhtml
+++ b/BidOnline-war/src/main/webapp/home.xhtml
@@ -12,94 +12,29 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core">
+      xmlns:f="http://java.sun.com/jsf/core"
+      xmlns:ui="http://java.sun.com/jsf/facelets">
 
-<h:head>
-    <title>Online-Bidder</title>
-    <h:outputStylesheet library="css" name="style.css"/>
-</h:head>
+<!--<h:head>-->
+    <!--<title>Online-Bidder</title>-->
+    <!--<h:outputStylesheet library="css" name="style.css"/>-->
+<!--</h:head>-->
 
-<h:body styleClass="indexContainer">
-    <!--<div class="SignUp">-->
-    <!--<h:link outcome="index.xhtml" value="logout"/>-->
-    <!--</div>-->
-    <p:messages/>
-    <p:layout fullPage="true">
-        <p:layoutUnit position="north" size="130" resizable="false">
-            <div style="float: right">
-                Welcome <p:outputLabel value=" #{homeController.loggedUserName}"/>!
-            </div>
-            <!--<div style="">-->
-            <!--<div style="float: left">-->
-            <!--<h2 style="color: #d2691e">BidOnline</h2>-->
+<h:body>
+
+    <ui:composition template="template/commonLayout.xhtml">
+
+        <ui:define name="title">
+            Online-Bidder
+        </ui:define>
+
+        <ui:define name="content">
+
+            <!--<div id="centerMenu">-->
+                <!--<ui:insert name="centerMenu">-->
+                    <!--<ui:include src="template/commonCenterMenu.xhtml"/>-->
+                <!--</ui:insert>-->
             <!--</div>-->
-            <div style="padding-top: 20px">
-                <h:form id="north1">
-                    <h:panelGrid columns="2">
-
-                        <h2 style="color: #d2691e;float: left">BidOnline</h2>
-                        <!--<div >-->
-                        <h:panelGrid columns="6" style="float: right;padding-left: 395px">
-                            <p:outputLabel value="Select" style="color: red"/>
-                            <p:outputLabel value="Category" style="color: red"/>
-                            <p:selectOneMenu value="#{homeController.itemCategory}">
-                                <f:selectItem itemValue="car" itemLabel="car"/>
-                                <f:selectItem itemValue="motor-cycle" itemLabel="Motor-cycle"/>
-                                <f:selectItem itemValue="auto-rickshaw" itemLabel="Auto-rickshaw"/>
-                                <f:selectItem itemValue="house" itemLabel="House"/>
-                                <f:selectItem itemValue="land" itemLabel="Land"/>
-                                <f:selectItem itemValue="shirt" itemLabel="Shirt"/>
-                                <f:selectItem itemValue="baby-wearings" itemLabel="Baby-wearings"/>
-                                <f:selectItem itemValue="shari" itemLabel="Shari"/>
-                                <f:selectItem itemValue="shoes" itemLabel="Shoes"/>
-                                <f:selectItem itemValue="diamond" itemLabel="Diamond"/>
-                                <f:selectItem itemValue="silver" itemLabel="Silver"/>
-                                <f:selectItem itemValue="gold" itemLabel="Gold"/>
-                                <f:selectItem itemValue="others" itemLabel="Others"/>
-                            </p:selectOneMenu>
-                            <p:commandButton value="Search"
-                                             action="#{homeController.showItemList(homeController.itemCategory)}"/>
-                            <p:spacer width="30px"/>
-                            <p:commandButton value="logout" action="#{homeController.logout}"/>
-                        </h:panelGrid>
-                        <!--</div>-->
-                    </h:panelGrid>
-                </h:form>
-            </div>
-
-            <!--</div>-->
-        </p:layoutUnit>
-        <p:layoutUnit position="center">
-            <div>
-                <h:form>
-                    <p:menubar style="color: #add8e6">
-                        <p:submenu label="My Profile">
-                            <p:submenu label="Offers">
-                                <p:menuitem value="Pending offers" outcome="myPendingList.xhtml"/>
-                                <p:menuitem value="Active offers" outcome="myOffers.xhtml"/>
-                            </p:submenu>
-
-                            <p:menuitem value="Bids" outcome="myBidList.xhtml"/>
-                            <p:menuitem value="Sellings" outcome="itemDetails.xhtml"/>
-                            <p:menuitem value="Edit profile"/>
-                        </p:submenu>
-                        <p:submenu label="Available offers">
-
-                            <p:menuitem rendered="#{homeController.userRole == 0}" value="Activate offers"
-                                        outcome="pendingOffers.xhtml"/>
-                            <p:menuitem value="Recent offers"  action="#{homeController.recent}"/>
-                            <p:menuitem value="Top offers" action="#{homeController.top}"/>
-
-                        </p:submenu>
-                        <p:menuitem value="Sell an item" outcome="itemDetails.xhtml"/>
-
-                        <p:menuitem value="Home" outcome="home.xhtml"/>
-                    </p:menubar>
-                </h:form>
-            </div>
-
-            <!--</div>-->
-
 
             <div style="padding-left: 200px;padding-top: 20px;padding-right: 200px">
                 <h:form>
@@ -110,8 +45,7 @@
                         <f:facet name="header">
                             Recent Offers
                         </f:facet>
-                        <!--<ui:param name="myVar" value="0"/>-->
-                        <!--<p:graphicImage value="" height="200" width="200"/>-->
+
                         <div style="background-color: #ffe4c4">
                             <h:panelGrid columns="3">
                                 <p:outputLabel value="Item name:"/>
@@ -131,19 +65,15 @@
                                                  action="#{homeController.offeredItemDetails(offers.itemId)}"/>
 
                             </h:panelGrid>
-
                         </div>
                         <p:spacer height="10px"/>
                     </p:dataList>
                 </h:form>
             </div>
 
-        </p:layoutUnit>
-        <!--<p:layoutUnit position="east" size="300" resizable="false">-->
+        </ui:define>
 
-        <!--</p:layoutUnit>-->
-
-    </p:layout>
+    </ui:composition>
 </h:body>
 
 </html>
