--- a/BidOnline-war/src/main/webapp/myBidList.xhtml
+++ b/BidOnline-war/src/main/webapp/myBidList.xhtml
@@ -58,7 +58,7 @@
                             <p:commandButton value="Search"
                                              action="#{myBidListController.showItemList(myBidListController.itemCategory)}"/>
                             <p:spacer width="30px"/>
-                            <p:commandButton value="logout" action="#{myBidListController.logout}"/>
+                            <p:commandButton value="logout" action="#{homeController.logout}"/>
                         </h:panelGrid>
                         <!--</div>-->
                     </h:panelGrid>
